added custom code

--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "ajv": "^6.12.3",
     "ajv-errors": "^1.0.1",
     "ajv-keywords": "^3.5.2",
+    "antd": "3.26.19",
     "boron": "^0.2.3",
     "brace": "^0.11.1",
     "classnames": "^2.2.6",
@@ -163,6 +164,7 @@
     "sinon": "=14.0.2",
     "source-map-explorer": "^2.5.2",
     "start-server-and-test": "=1.14.0",
+    "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.1",
     "url-loader": "^4.1.1",
     "webpack": "^5.70.0",
